# Transparadon-Project

./: Cargo.toml  README.md  dao_contract.rs  impact_tracking_example.rs  package-lock.json
contracts/transparadon/: Cargo.toml
contracts/transparadon/src/: lib.rs  test.rs
transparadon-backend/: .env  index.js  package-lock.json  package.json  server.js
transparadon-backend/config/: default.json  stellar.js
transparadon-backend/controllers/: authCotroller.js  donationsController.js
transparadon-backend/middleware/: auth.js  stellarService.js
transparadon-backend/models/: Charities.js  Donations.js  User.js
transparadon-backend/routes/: authRoutes.js  charitiesRoutes.js  donations.js  index.js  protectedRoute.js  sorobanRoutes.js  stellarRoutes.js  userRoutes.js
transparadon-frontend/: README.md  index.html  package-lock.json  package.json
transparadon-frontend/src/: App.js  App.tsx  index.css
transparadon-frontend/src/components/: CreateAccount.js  DonationForm.js  DonationList.js  InvokeContract.js  Login.js  MakePayments.js  NavBar.js  Register.js  VotingForm.js
transparadon-frontend/src/components/Footer/: Footer.tsx
transparadon-frontend/src/components/Home/: Home.tsx
transparadon-frontend/src/components/NavBar/: NavBar.tsx
transparadon-frontend/src/components/Pages/: Donate.tsx
transparadon-frontend/src/pages/: Home.js
transparadon-frontend/src/services/: api.js  auth.js  sorobanServices.js  stellarServices.js
