[workspace]
resolver = "2"
members = [
  "contracts/*",
  
]

[workspace.dependencies]
soroban-sdk = "21.0.1-preview.3"
soroban-token-sdk = "21.0.1-preview.3"
stellar = "=0.1.2-alpha"
tokio = { version = "1.0", features = ["full"] }
num-bigint = "0.4"
num-traits = "0.2"
rocket = "0.5.0"
rocket_contrib = "0.5.0"
serde = { version = "1.0", features = ["derive"] }


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
